Adjusted API Doku so it is consistent with the backend, also made adjustments to the database structure of conversations and message. WIP sendmessage.
